--- a/src/components/NoteItem/NoteItem.module.css
+++ b/src/components/NoteItem/NoteItem.module.css
@@ -5,5 +5,6 @@
 }
 
 .body {
-  white-space: pre;
+  overflow-wrap: anywhere;
+  white-space: initial;
 }
