--- a/src/components/TaskItem/TaskItem.module.css
+++ b/src/components/TaskItem/TaskItem.module.css
@@ -7,6 +7,8 @@
 .input,
 .label {
   cursor: pointer;
+  overflow-wrap: anywhere;
+  white-space: initial;
 }
 
 .input:checked + .label {
